src/compiler/glsl/glsl_parser_extras.cpp
@@ -2010,8 +2010,6 @@ opt_shader_and_create_symbol_table(struct gl_context *ctx,
          break;
       }
    }
-
-   _mesa_glsl_initialize_derived_variables(ctx, shader);
 }
 
 void
